Added more resources for all clouds

--- a/.github/workflows/infracost.yml
+++ b/.github/workflows/infracost.yml
@@ -5,10 +5,12 @@ on:
     branches:
       - main
       - develop
+      - develop-ai
   pull_request:
     branches:
       - main
       - develop
+      - develop-ai
   workflow_dispatch:
 
 env:
