--- a/aws/infracost-usage.yml
+++ b/aws/infracost-usage.yml
@@ -3,8 +3,43 @@
 # `infracost breakdown --path=. --usage-file=infracost-usage.yml [other flags]`
 # See https://infracost.io/usage-file/ for docs
 version: 0.1
+
 # The following usage values apply to each resource of the given type, which is useful when you want to define defaults.
 resource_type_default_usage:
   aws_lambda_function:
     monthly_requests: 20000000 # Monthly requests to the Lambda function.
     request_duration_ms: 350 # Average duration of each request in milliseconds.
+
+# Resource-specific usage
+resource_usage:
+  # S3 bucket for ML artifacts
+  aws_s3_bucket.ml_artifacts:
+    storage_gb: 5000 # 5 TB of model artifacts and datasets
+    monthly_tier_1_requests: 10000000 # PUT, COPY, POST, LIST requests
+    monthly_tier_2_requests: 50000000 # GET, SELECT requests
+    monthly_select_data_scanned_gb: 1000
+    monthly_select_data_returned_gb: 100
+
+  # EFS for shared ML storage
+  aws_efs_file_system.ml_shared_storage:
+    storage_gb: 2000 # 2 TB of shared storage
+    monthly_infrequent_access_storage_gb: 500 # 500 GB in IA storage
+
+  # GPU EC2 instance usage (assuming not 24/7 for cost savings)
+  aws_instance.ml_gpu_instance:
+    operating_system: linux
+    reserved_instance_type: none
+    monthly_hrs: 500 # ~16-17 hours per day for training workloads
+
+  # SageMaker Notebook Instance
+  aws_sagemaker_notebook_instance.ml_notebook:
+    monthly_hrs: 730 # Full month usage for development
+
+  # SageMaker Endpoint for inference
+  aws_sagemaker_endpoint.ml_endpoint:
+    monthly_inference_requests: 50000000 # 50M inference requests per month
+
+  # ECR storage
+  aws_ecr_repository.ml_containers:
+    storage_gb: 500 # Container images storage
+
